# osu_mapper

./: .gitattributes  .gitignore  HANDOFF.md  NEW_AGENT_PROMPT.md  README.md  RESEARCH.md  RESULTS.md  STORAGE.md  TECH_REPORT.md  analyze_phase1.py  eval_spacing_channel.py  main.py  pyproject.toml  requirements.txt  run_inference.py
docs/: INDEX.md
docs/knowledge/: architecture.md  audit-findings.md  corpus-stats.md  diffusion-math.md  lessons-learned.md  mapping-patterns.md  references.md  signal-encoding.md
docs/status/: results.md  roadmap.md
docs/v9/: task2_data_stats.md  task_rl_policy_gradient.md
docs/versions/: README.md  v1-v3.md  v4.md  v5.md  v6.md  v7.md  v8.md  v9.md
src/: _perf.py  best_of_n.py  conditioning.py  config.py  corpus_stats.py  difficulty.py  evaluate.py  generate.py  metrics.py  package_map.py  postprocess.py  run_inference.py  train.py
src/data/: audio.py  dataset.py  osu_db.py  preprocess.py  signal.py  timing.py  val_split.py
src/eval/: __init__.py  analyze_phase1.py  eval_spacing_channel.py  measure_reward.py  reward.py
src/model/: diffusion.py  unet.py
src/parsing/: beatmap.py  osu_objects.py
tests/: conftest.py  test_aim_intensity.py  test_audio.py  test_best_of_n.py  test_conditioning.py  test_config.py  test_corpus_stats.py  test_dataset.py  test_difficulty.py  test_early_abort.py  test_edge_cases.py  test_flow_metrics.py  test_measure_reward.py  test_metrics.py  test_model.py  test_osu_db.py  test_parsing.py  test_perf.py  test_postprocess.py  test_postprocess_grid.py  test_reward.py  test_reward_flow.py  test_rl_logprob.py  test_signal.py  test_timing.py  test_timing_model.py  test_train.py  test_val_split.py  test_writer.py
(+20 files in other folders)
