[project]
name = "osu-mapper"
version = "0.1.0"
description = "Diffusion-based osu! beatmap generation from raw audio"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.6",
    "numpy>=1.26",
    "librosa>=0.11",
    "soundfile>=0.13",
    "h5py>=3.16",
    "tqdm>=4.66",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
osu-mapper = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# --- uv -----------------------------------------------------------------------
# CUDA build of torch comes from the PyTorch index. Switch cu124 to match your
# CUDA version (or drop the source block for the CPU build).
[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

# --- ruff ---------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E741",  # ambiguous variable names (x/y are osu! coordinates)
    "B905",  # zip(...) without strict= (fine for equal-length model tensors)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]  # imports after fixtures in a couple of tests

# --- pytest -------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
